--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid d-flex justify-content-between">
+            <span class="navbar-brand mb-0 h1">{{ name }}</span>
+            <form class="d-flex">
+                <a href="{% url 'main:logout' %}">
+                    <button class="btn btn-outline-light me-2" type="button">Logout</button>
+                </a>
+            </form>
+        </div>
+    </nav>
+
     <h1>Shopping List Page</h1>
 
     <h5>Name:</h5>
@@ -25,6 +36,18 @@
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}">
+                        <button>
+                            Edit
+                        </button>
+                    </a>
+                    <a href="{% url 'main:delete_product' product.pk %}">
+                        <button>
+                            Delete
+                        </button>
+                    </a>
+                </td>            
             </tr>
         {% endfor %}
     </table>
@@ -38,11 +61,5 @@
     </a>
 
     <h5>Sesi terakhir login: {{ last_login }}</h5>
-
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
 
 {% endblock content %}
